# sdk-nrf

./: compliance.xml  west.yml
samples/bluetooth/throughput/: CMakeLists.txt  overlay-wifi_old.conf  prj.conf  prj_nrf5340dk_nrf5340_cpuapp.conf
samples/bluetooth/throughput/child_image/: hci_rpmsg.conf
samples/bluetooth/throughput/src/: cmds.c  main.c
samples/wifi/ble_coex/: CMakeLists.txt  Kconfig  Kconfig.sysbuild  README.rst  coex.c  coex.h  fmac_api_common.c  fmac_api_common.h  prj.conf  sample.yaml  sysbuild.conf
samples/wifi/ble_coex/all_files/: Kconfig  coex.c  coex.h  coex_common_hdr.h  coex_common_patch.c  coex_struct.h  fmac_main.c  main.c  phy_common_patch.c  placement.py  prj.conf
samples/wifi/ble_coex/src/: ble_coex_main.c  ble_coex_shell.c  bt_throughput_test.c  bt_throughput_test.h  llpm.c  main.c
samples/wifi/thread_coex/: CMakeLists.txt  Kconfig  Kconfig.sysbuild  README.rst  overlay-logging.conf  overlay-openthread.conf  overlay-wifi-udp-client-thread-udp-client.conf  overlay-wifi-udp-client-thread-udp-server.conf  prj.conf  sample.yaml  zperf_common.c  zperf_shell.c  zperf_tcp_uploader.c  zperf_udp_uploader.c
samples/wifi/thread_coex/src/: main.c  main.h  ot_coex_functions.c  ot_coex_functions.h  ot_coex_test_functions.c  ot_coex_test_functions.h  ot_utils.c  ot_utils.h  thread_coex_main.c  thread_coex_main.h  thread_coex_shell.c  thread_coex_shell.h  wifi_utils.c  wifi_utils.h  zperf_utils.c  zperf_utils.h
samples/wifi/thread_coex/test/: Kconfig  overlay-wifi-tcp-client-thread-client.conf  overlay-wifi-tcp-client-thread-server.conf  overlay-wifi-tcp-server-thread-client.conf  overlay-wifi-tcp-server-thread-server.conf  test_cases.conf  (+2 more)
(+102 files in other folders)
